# ModelGardener

./: .gitignore  AUGMENTATION_GUIDE.md  CIFAR10_IMPLEMENTATION_COMPLETE.md  CIFAR10_INTEGRATION.md  CLI_ENHANCEMENT_SUMMARY.md  CLI_EVALUATION_PREDICTION_DEPLOYMENT_ENHANCEMENT_SUMMARY.md  CLI_README.md  CONFIGURATION_GUIDE.md  CUSTOM_LOSS_FIX_SUMMARY.md  CUSTOM_METRICS_FIX_SUMMARY.md  CUSTOM_MODEL_CONFIG_FIX.md  DEPTH_CONFIGURATION_FIX_SUMMARY.md  ENHANCED_CONFIG_GUIDE.md  ENHANCED_FEATURES_SUMMARY.md  ENHANCED_METRICS_IMPLEMENTATION_SUMMARY.md  ENHANCED_MODEL_CONFIG_SUMMARY.md  ENHANCED_PREPROCESSING_SUMMARY.md  ENHANCED_TRAINING_GUIDE.md  EXTRA_IMPROVEMENTS_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION_GUIDE.md  LOGGING_SIMPLIFICATION_SUMMARY.md  LOG_TIMING_FIX.md  LOSS_FUNCTION_IMPROVEMENTS.md  MANIFEST.in  METRICS_ENHANCEMENT_COMPLETE_SUMMARY.md  MODEL_CONFIGURATION_SUMMARY.md  MODEL_PARAMETERS_GUIDE.md  MODEL_REDESIGN_SUMMARY.md  MODULAR_CLI_SUMMARY.md  MODULE_SUPPORT_SUMMARY.md  MULTIPLE_FUNCTIONS_UPDATE.md  PARAMETER_LIMITS_FIX_SUMMARY.md  PREPROCESSING_ENHANCEMENT_SUMMARY.md  PREPROCESSING_METRICS_FIXES_SUMMARY.md  README.md  READY_FOR_USE.md  REFACTORING_SUMMARY.md  (+115 more)
.github/: copilot-instructions.md
.github/instructions/: add log.instructions.md
.github/workflows/: simple-version-bump.yml  version-bump.yml
backup/: CLI_README.md  README_NEW.md  demonstrate_loss_improvements.py  generate_sample_config.py  model_group.py
config/: __init__.py  augmentation_config.py  base_config.py  cli_interface.py  data_config.py  loss_metrics_config.py  model_config.py  preprocessing_config.py
custom_modules/: custom_augmentations.py  custom_callbacks.py  custom_data_loaders.py  custom_loss_functions.py  custom_models.py  custom_preprocessing.py  custom_training_loops.py
docs/: README.md  installation.md  preview_command.md
docs/cli/: README.md  auto-discovery.md  check.md  config.md  create.md  deploy.md  evaluate.md  models.md  predict.md  preview.md  train.md
docs/tutorials/: complete-workflow.md
example_funcs/: example_custom_augmentations.py  example_custom_callbacks.py  example_custom_data_loaders.py  example_custom_loss_functions.py  example_custom_metrics.py  example_custom_models.py  example_custom_optimizers.py  example_custom_preprocessing.py  example_custom_training_loops.py  example_multi_output_model.py  example_parametertree.py
modelgardener/: __init__.py  __main__.py  cli.py
modelgardener.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
my_project/: README.md  config.yaml  deploy.py  evaluation.py  prediction.py  train.py
my_project/custom_modules/: README.md  __init__.py  custom_augmentations.py  custom_callbacks.py  custom_data_loaders.py  custom_loss_functions.py  custom_metrics.py  custom_models.py  custom_optimizers.py  custom_preprocessing.py  custom_training_loops.py
p1/: README.md  config.yaml  deploy.py  evaluation.py  prediction.py  train.py
p1/custom_modules/: custom_augmentations.py  custom_callbacks.py  custom_data_loaders.py  custom_metrics.py  custom_models.py  custom_optimizers.py  custom_preprocessing.py
p1/data/: cifar10.npz
p1/logs/: best_model.h5  final_model.h5
src/modelgardener/: __init__.py  bridge_callback.py  cli.py  cli_config.py  config_manager.py  custom_functions_loader.py  enhanced_model_builder.py  enhanced_trainer.py  helper_funcs.py  main.py  modelgardener_cli.py  preprocessing_pipeline.py  runtime_configurator.py  scalable_dataset_loader.py  script_generator.py  training_components_builder.py
src/modelgardener/example_funcs/: example_custom_augmentations.py  example_custom_callbacks.py  example_custom_data_loaders.py  example_custom_loss_functions.py  example_custom_metrics.py  example_custom_models.py  example_custom_optimizers.py  example_custom_preprocessing.py  example_custom_training_loops.py  example_multi_output_model.py  utils.py
