[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelgardener"
version = "2.0.0"
description = "A command-line interface for deep learning model training with TensorFlow/Keras"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "ModelGardener Team", email = "contact@modelgardener.com"},
]
keywords = ["deep-learning", "machine-learning", "tensorflow", "keras", "cli", "training"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Flask>=2.2.0",
    "Pillow>=8.3.0",
    "PyYAML>=6.0", 
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "tensorflow>=2.16.0",
    "inquirer>=3.1.3",
]

[project.urls]
"Homepage" = "https://github.com/Yukun-Guo/ModelGardener"
"Bug Tracker" = "https://github.com/Yukun-Guo/ModelGardener/issues"
"Repository" = "https://github.com/Yukun-Guo/ModelGardener"

[project.scripts]
mg = "modelgardener.cli:run_cli"
modelgardener = "modelgardener.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
