[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-project"
version = "0.1.0"
description = "Machine Learning project using ModelGardener - create_simple_cnn"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ModelGardener User", email = "user@example.com"},
]
keywords = ["machine-learning", "deep-learning", "tensorflow", "keras", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Flask>=2.2.0",\n    "Pillow>=8.3.0",\n    "PyYAML>=6.0",\n    "matplotlib>=3.5.0",\n    "numpy>=1.21.0",\n    "scikit-learn>=1.0.0",\n    "seaborn>=0.11.0",\n    "tensorflow>=2.10.0"
]

[project.optional-dependencies]
onnx = ["tf2onnx", "onnx", "onnxruntime"]
tfjs = ["tensorflowjs"]
quantization = ["onnxruntime", "tensorflow-model-optimization"]
encryption = ["cryptography"]
dev = ["pytest", "black", "flake8", "mypy"]
jupyter = ["jupyter", "ipykernel", "ipywidgets"]

[project.urls]
"Homepage" = "https://github.com/Yukun-Guo/ModelGardener"
"Bug Tracker" = "https://github.com/your-username/ml-project/issues"
"Repository" = "https://github.com/your-username/ml-project"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_modules*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["custom_modules"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "keras.*",
    "numpy.*",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "PIL.*",
    "cv2.*",
]
ignore_missing_imports = true
